--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-image: url('./assets/backgrounds/welcome.png');
+  background-repeat: repeat;
 }
 
 .App-logo {
