--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url('./assets/backgrounds/welcome.png');
+  background-image: url('../public/assets/backgrounds/welcome.png');
   background-repeat: repeat;
 }
 
