--- a/client/src/components/savedStories/SavedStoriesContainer.scss
+++ b/client/src/components/savedStories/SavedStoriesContainer.scss
@@ -5,7 +5,7 @@
   margin: 0 50px;
   gap: 20px;
   padding-bottom: 100px;
-  padding-right: 300px;
+  width: 1300px;
 
   .container {
     border-radius: 20px;
