--- a/client/src/components/savedStories/SavedStoryDetail.scss
+++ b/client/src/components/savedStories/SavedStoryDetail.scss
@@ -1,5 +1,5 @@
 .storyDetail {
-  padding: 100px 400px;
+  padding: 100px 100px;
 
   .trapdoor {
     margin-left: 300px;
@@ -11,6 +11,10 @@
     width: 100%;
     font-size: 3rem;
     letter-spacing: 5px;
+
+    h3 {
+      padding: 0 20px;
+    }
   }
 
   .container {
@@ -24,6 +28,59 @@
       font-size: 1rem;
       display: flex;
       gap: 10px;
+      align-items: center;
+
+      .bi-trash3 {
+        margin-left: 50px;
+      }
+
+      .deleteStory {
+        background-color: #a4425f;
+        color: #ffd6de;
+        font-size: 1rem;
+        border-width: 0;
+        cursor: pointer;
+
+        box-sizing: border-box;
+        position: relative;
+        padding: 0.75em;
+
+        &:hover {
+          text-shadow: 0px 0px 5px red;
+          color: white;
+          font-weight: bolder;
+        }
+
+        &::before,
+        &::after {
+          content: '';
+          box-sizing: border-box;
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          transform-origin: center;
+        }
+
+        &::before {
+          border-top: 0.2em solid #ffd6de;
+          border-bottom: 0.2em solid #ffd6de;
+          transform: scale3d(0, 1, 1);
+        }
+
+        &::after {
+          border-left: 0.2em solid #ffd6de;
+          border-right: 0.2em solid #ffd6de;
+          transform: scale3d(1, 0, 1);
+        }
+
+        &:hover::before,
+        &:hover::after {
+          transform: scale3d(1, 1, 1);
+          transition: transform 900ms;
+        }
+      }
     }
 
     .plot {
