--- a/client/src/components/savedStories/SavedStoryDetail.scss
+++ b/client/src/components/savedStories/SavedStoryDetail.scss
@@ -3,7 +3,7 @@
 
   .trapdoor {
     margin-left: 300px;
-    margin-top: 100px;
+    margin-top: 80px;
   }
 
   .storyTitle {
@@ -90,6 +90,11 @@
       margin: 0;
       margin-bottom: 20px;
       text-shadow: 2px 1px rgb(31, 18, 69);
+
+      p {
+        margin-block-start: 0.5em;
+        margin-block-end: 0.5em;
+      }
     }
 
     img {
