--- a/client/src/components/savedStories/SavedStoryDetail.scss
+++ b/client/src/components/savedStories/SavedStoryDetail.scss
@@ -91,7 +91,7 @@
       margin-bottom: 20px;
       text-shadow: 2px 1px rgb(31, 18, 69);
 
-      p {
+      .text {
         margin-block-start: 0.5em;
         margin-block-end: 0.5em;
       }
@@ -101,4 +101,55 @@
       border-radius: 30px;
     }
   }
+}
+
+.edit {
+  justify-content: end;
+  padding-right: 30px;
+  cursor: pointer;
+  box-sizing: border-box;
+  position: relative;
+  padding: 0.75em;
+
+  &:hover {
+    text-shadow: 0px 0px 5px red;
+    color: white;
+    font-weight: bolder;
+  }
+  * {
+    margin: 0 !important;
+    padding: 0 !important;
+    text-shadow: none !important;
+  }
+}
+
+.update {
+  align-items: end;
+  textarea {
+    text-align: left;
+    &::placeholder {
+      text-align: left;
+    }
+  }
+
+  button {
+    border: 0;
+    cursor: pointer;
+    padding: 10px 30px;
+    font-size: 1rem;
+    font-weight: 900;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    background-color: #5495a3;
+    color: bisque;
+  }
+
+  button:hover {
+    box-shadow: 2px 2px pink;
+    background-color: #218838;
+  }
+}
+
+.plot.flex-row.twist {
+  margin-bottom: 0 !important;
 }
