working-with webpack
Next Step:

Move apiCalls to server side

--- a/client/src/components/StoryBuilder.scss
+++ b/client/src/components/StoryBuilder.scss
@@ -379,7 +379,7 @@
   font-size: 1rem;
 
   #titleLabel {
-    background-image: url(../../public/arrow-down-right-square-fill.svg);
+    background-image: url('../../public/arrow-down-right-square-fill.svg');
     background-repeat: no-repeat;
     color: #ffd6de;
     padding-left: 30px;
