--- a/client/src/components/savedStories/SavedStoryDetail.scss
+++ b/client/src/components/savedStories/SavedStoryDetail.scss
@@ -30,6 +30,10 @@
       gap: 10px;
       align-items: center;
 
+      .bi-person-circle {
+        margin-left: 50px;
+      }
+
       .bi-trash3 {
         margin-left: 50px;
       }
